# MPS-TOM-Urnmodel

./: .flake8  .gitignore  LICENSE  Manifest.toml  README.md  make_synthetic_target.jl  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: flake8.yml
data/: aps.csv  synthetic_target.csv  twitter.csv
full-search/: README.md  fitting.py  main.jl  main.py
ga/: .gitignore  Manifest.toml  Project.toml  README.en.md  README.md  ga.py  grid_search.py  history2vec.jl  history2vec.py  io_utils.py  julia_initializer.py  main.py  run_model.py  search_best.py
lib/: history2vec.jl  history2vec.py  julia_initializer.py  run_model.py
qd/: Manifest.toml  README.md  copy_best.py  main.py  make_model.py  qd.py  synthetic_fitting.py  tuning.py
qd/history2bd/: README.md  main.py
qd/models/: standardize.pkl
qd/models/128/: graph2vec.pkl  standardize.pkl
qd/models/256/: graph2vec.pkl  standardize.pkl
qd/models/64/: graph2vec.pkl  standardize.pkl
random-search/: README.md  fitting.py  main.py  random-search.py  random_search.py
visualize/: README.md  bar_graph.py  main.py  make_vec.py  preprocessing.py  radar_chart.py  timeline.py
visualize/graphs/: bar_graph.py  box.py  gene_space.py  latex_best_table.py  latex_table.py  map.py  print_best.py  qd_map.py  radar_chart.py  timeline.py
