[tool.black]
line-length = 119
exclude = '''
(
    | .git
    | .github
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 119
multi_line_output = 3

[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["Nanami <88866882+krmr73@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
