[tool.black]
line-length = 119
exclude = '''
(
    | .git
    | .github
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 119
multi_line_output = 3

[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["Nanami <88866882+krmr73@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
karateclub = "1.3.3"
ribs = "^0.5.1"
tqdm = "^4.65.0"
rsurn = {git = "https://github.com/tsukuba-websci/rsurn", rev = "69c588ec018d3a7cd38e3f98dbb5417cdcdec172"}
julia = "0.6.0"
sklearn = "^0.0.post5"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
